@@ -32,6 +32,7 @@ Changes in 3.2.2 :
 - Prevent torrent from being loaded twice when loading torrents via commandline or external program (190434)
 - Fix crash caused by uncaught exception (190317)
 - Fix crash caused by sorting list of torrent in QM when the list is being cleared (190759)
+- Added patch from amichai which makes the plasma applet a popup applet and which fixes some other things (190822)
 
 Changes in 3.2.1 :
 - Resort torrents if display name is changed
